--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,11 +6,18 @@ WORKDIR /app
 COPY package.json package-lock.json* ./
 RUN npm install
 
-# Copy application code
 COPY . .
 
-# Expose port
+# Build args for Next.js (baked into client at build time)
+ARG NEXT_PUBLIC_API_URL
+ARG NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY
+ENV NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL
+ENV NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=$NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY
+
+# Production build
+RUN npm run build
+
 EXPOSE 3000
 
-# Development mode
-CMD ["npm", "run", "dev"]
+# Production mode (pre-compiled, much faster)
+CMD ["npm", "run", "start"]
