--- a/nginx-optimized.conf
+++ b/nginx-optimized.conf
@@ -1,12 +1,6 @@
 # Optimized Nginx config for analyticsinterview.live
 # Copy to /etc/nginx/sites-available/analyticsinterview and restart nginx
-
-# Gzip compression (add in http block or top-level)
-gzip on;
-gzip_vary on;
-gzip_min_length 1024;
-gzip_proxied any;
-gzip_types text/plain text/css text/xml text/javascript application/javascript application/json application/xml;
+# Note: gzip is usually already in nginx.conf - do NOT add here to avoid duplicate
 
 # Upstream with keepalive for faster connections
 upstream frontend {
