Update the logic

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,11 @@
-# Copy this file to .env and fill in your keys
+# Copy this file to .env and adjust values for your environment
 # cp .env.example .env
 
-# Clerk (required for auth) - https://dashboard.clerk.com
-CLERK_PUBLISHABLE_KEY=pk_test_xxxxx
-CLERK_SECRET_KEY=sk_test_xxxxx
-
-# Frontend/Backend URLs (for domain)
+# Public API URL for the frontend build
 NEXT_PUBLIC_API_URL=https://analyticsinterview.live/api
+
+# Where the frontend is hosted (used by backend for CORS/Cookies)
 FRONTEND_URL=https://analyticsinterview.live
+
+# Secret key for signing JWT tokens (override in backend/.env if needed)
+SECRET_KEY=change-me-in-production
