--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,11 +3,19 @@
 # Database connection (Docker: hostname "db")
 DATABASE_URL=postgresql+asyncpg://postgres:postgres@db:5432/mock_interview
 
-# JWT secret (override via docker-compose if needed)
+# JWT secret (required for auth)
 SECRET_KEY=change-me-in-production
 
-# Production URL of frontend (used for CORS)
+# Frontend URL (used for CORS)
 FRONTEND_URL=https://analyticsinterview.live
 
-# Set DEBUG=false in production
+# DEBUG=false in production
 DEBUG=false
+
+# LLM (see KEYS_SETUP_GUIDE.md)
+OPENAI_API_KEY=
+LLM_PROVIDER=openai
+
+# YooKassa (see KEYS_SETUP_GUIDE.md)
+YOOKASSA_SHOP_ID=
+YOOKASSA_SECRET_KEY=
