--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,13 +1,13 @@
-# Copy to backend/.env and keep secrets out of git
+# Copy to backend/.env, оригинал лежит на серевере, это просто пример как его заполнять
 
 # Database connection (Docker: hostname "db")
 DATABASE_URL=postgresql+asyncpg://postgres:postgres@db:5432/mock_interview
 
 # JWT secret (required for auth)
-SECRET_KEY=change-me-in-production
+SECRET_KEY=
 
 # Frontend URL (used for CORS)
-FRONTEND_URL=https://analyticsinterview.live
+FRONTEND_URL=
 
 # DEBUG=false in production
 DEBUG=false
