--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -1,3 +1,5 @@
+# Штука нужна для работы с миграциями в БД, без нее не получится аккуратно менять структуру БД.
+# Config for Alembic (DB migrations). Required for `alembic upgrade head` and `alembic revision`. Do not remove.
 # A generic, single database configuration.
 
 [alembic]
