--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -24,6 +24,7 @@ yookassa==3.1.0
 
 # Utilities
 pydantic==2.5.3
+openpyxl==3.1.2  # for import_tasks.py (XLSX import)
 pydantic-settings==2.1.0
 python-dotenv==1.0.0
 
