Update deployment guide and configuration for PostgreSQL without password authentication

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,7 @@
 # Copy to backend/.env, оригинал лежит на серевере, это просто пример как его заполнять
 
 # Database connection (Docker: hostname "db")
-DATABASE_URL=postgresql+asyncpg://postgres:postgres@db:5432/mock_interview
+DATABASE_URL=postgresql+asyncpg://postgres@db:5432/mock_interview
 
 # JWT secret (required for auth)
 SECRET_KEY=
